[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apple-certifi>=3.0.2",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "gradio>=6.18.0",
    "langchain-huggingface>=1.2.2",
    "litellm>=1.89.1",
    "openai>=2.2.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
]

[[tool.uv.index]]
url = "https://pypi.apple.com/simple/"
